--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,4 @@
 <h1>Home</h1>
 <p>Welcome!</p>
 
-<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
