--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: #59F;
+  background: #fff;
 }
 
 header {
@@ -12,41 +12,41 @@ header {
 
 header img {
   padding: 1em;
-  background: #fff;
+  background: #59f;
 }
 
 section {
   margin-top: 1em;
   font-size: 120%;
   padding: 20px;
-  background: #fff;
+  background: #59f;
 }
 
 section h1 {
   font-size: 400%;
-  color: #59F;
+  color: #fff;
 }
 
 section hc {
   font-size: 200%;
-  color: #59F;
+  color: #fff;
   text-align:bottom;
 }
 
 /* Links */
 
 a {
-  color: #59F;
+  color: #fff;
   text-decoration: none;
 }
 
 a:hover {
-  color: #59F;
+  color: #fff;
   text-decoration: underline;
 }
 
 a:visited {
-  color: #59F;
+  color: #59f;
 }
 
 /* Navigation */
@@ -78,7 +78,7 @@ nav ul li a {
 }
 
 nav ul li a:visited {
-  color: #09c;
+  color: #59f;
 }
 
 nav ul li a:hover {
@@ -92,8 +92,8 @@ a.signup_button {
   display: block;
   text-align: center;
   width: 190px;
-  color: #fff;
-  background: #59F;
+  color: #59f;
+  background: #fff;
   font-size: 150%;
   font-weight: bold;
   padding: 20px;
