--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,16 @@
-<%= @user.name %>, <%= @user.email %>, <%= @user.island%>
+
+
+<table class="profile" summary="Profile information">
+  <tr>
+    <td class="main">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+		<%=@user.island%>
+      </h1>
+    </td>
+    <td class="sidebar round">
+    <!--  <strong>URL</strong>  <%= link_to user_path(@user), @user %> -->
+    </td>
+  </tr>
+</table>
