Done with Chapter 9

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -36,12 +36,12 @@ section hc {
 /* Links */
 
 a {
-  color: #fff;
+  color: #59f;
   text-decoration: none;
 }
 
 a:hover {
-  color: #fff;
+  color: #59f;
   text-decoration: underline;
 }
 
