--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <header>
+	
 
   <nav class="round">
     <ul>
@@ -6,6 +7,7 @@
       <li><%= link_to "About", about_path %></li>
 	<% if signed_in? %>
 	      <li><%= link_to "Profile", current_user %></li>
+	      <li><%= link_to "Settings", edit_user_path(current_user) %></li>
 	      <li><%= link_to "Exit", signout_path, :method => :delete %></li>
 	      <% else %>
 	      <li><%= link_to "Return", signin_path %></li>
