--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,6 +1,6 @@
 .container {
   width: 710px;
-  height: 800px;
+  height: 100px;
 }
 
 body {
@@ -24,8 +24,9 @@ section {
 }
 
 section h1 {
-  font-size: 400%;
+  font-size: 2	00%;
   color: #f2f0ee;
+  
 }
 
 section h2 {
@@ -33,10 +34,11 @@ section h2 {
   color: #f2f0ee;
 }
 
-section hc {
-  font-size: 110%;
+section hg {
   color: #f2f0ee;
   float:right;
+	position:relative;
+	top:-50px;
 }
 
 /* Links */
