done with all of chapter 10

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -44,7 +44,7 @@ section hg {
 /* Links */
 
 a {
-  color: #f00;
+  color: #6E8Fb8;
   text-decoration: none;
 }
 
@@ -54,7 +54,7 @@ a:hover {
 }
 
 a:visited {
-  color: #f00;
+  color: #6E8FB8;
 }
 
 /* Navigation */
