--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,13 @@
 <header>
 	
-
   <nav class="round">
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>
 	<% if signed_in? %>
-	  <li><%= link_to "Users", users_path %></li>
+	      <li><%= link_to "Users", users_path %></li>
 	      <li><%= link_to "Profile", current_user %></li>
-	      <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+	      <li><%= link_to "Account", edit_user_path(current_user) %></li>
 	      <li><%= link_to "Exit", signout_path, :method => :delete %></li>
 	      <% else %>
 	      <li><%= link_to "Return", signin_path %></li>
