--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,5 +1,5 @@
 .container {
-  width: 710px;
+  width: 710px;ac
   height: 100px;
 }
 
@@ -24,7 +24,7 @@ section {
 }
 
 section h1 {
-  font-size: 2	00%;
+  font-size: 200%;
   color: #f2f0ee;
   
 }
@@ -35,6 +35,7 @@ section h2 {
 }
 
 section hg {
+  font-size: 200%;
   color: #f2f0ee;
   float:right;
 	position:relative;
@@ -57,6 +58,22 @@ a:visited {
   color: #6E8FB8;
 }
 
+/* inside a colored area */
+.coloredlink {
+ {
+  color: #FFF;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #FFF;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: #FFF;
+}
+}
 /* Navigation */
 
 nav {
@@ -67,6 +84,7 @@ nav {
   background-color: #f2f0ee;
   padding: 0 0.7em;
   white-space: nowrap;
+
 }
 
 nav ul {
@@ -114,6 +132,8 @@ a.signup_button {
   border-radius:         10px;
 }
 
+
+
 footer {
   text-align: left;
   font-size: 125%;
@@ -152,8 +172,10 @@ td.sidebar {
 }
 
 
-div.field div.actions {
+div.field div.
+ {
 	margin-bottom: 10px;
+	height: 1em;
 }
 
 
@@ -197,13 +219,82 @@ div.field div.actions {
   font-size: 12px;
   list-style: square;
 }
+
+
+
 ul.users {
   margin-top: 1em;
-  color:#f00;
+  color:#fff;
   font-weight: bold;
 }
 
 .users li {
   list-style: none;
 
+}
+
+.users a{
+	color:#fff;
+	vertical-align:top;
+}
+
+h1.nanopost {
+  margin-bottom: 0.3em;
+}
+
+table.nanoposts {
+  margin-top: 1em;
+}
+
+table.nanoposts tr {
+  height: 70px;
+}
+
+table.nanoposts tr td.gravatar {
+  border-top: 1px solid #ccc;
+  vertical-align: top;
+  width: 50px;
+}
+
+table.nanoposts tr td.nanopost {
+  border-top: 1px solid #ccc;
+  vertical-align: top;
+  padding-top: 10px;
+}
+
+table.nanoposts td tr span.timestamp {
+  display: block;
+  font-size: 85%;
+  color: #666;
+}
+
+
+div.user_info img {
+  padding-right: 0.1em;
+}
+
+div.user_info a {
+  text-decoration: none;
+}
+
+div.user_info span.user_name {
+  position: absolute;
+}
+
+div.user_info span.nanoposts {
+  font-size: 80%;
+}
+
+div.postings {
+	-moz-border-radius:    10px;
+	  -webkit-border-radius: 10px;
+	  border-radius:         10px;
+	background-color:#f2f0ee;
+	color:#666 ;
+	vertical-align: top;
+	padding-top: 10px;	
+}
+div.postings span.timestamp {display: block;
+  font-size: 85%;
+  color: #6E8FB8;
 }
